refatoracao de design

--- a/src/app/components/form1/form1.component.html
+++ b/src/app/components/form1/form1.component.html
@@ -78,7 +78,7 @@
           <label mdbLabel class="form-label" for="form6Example4">Número</label>
         </mdb-form-control>
 
-        <button mdbRipple type="submit" class="btn btn-primary btn-block mb-4">
+        <button mdbRipple type="submit" class="btn btn-primary btn-block mb-4" style="background-color: rgb(134, 181, 86);">
           Enviar documento
         </button>
       </form>
