--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,10 +1,12 @@
 .opcao{
     font-size: 25px;
     color: white;
+    font-weight: 300;
+    font-style: italic;
 }
 
 nav{
-    background-color: #0135BA;
+    background-color: #000000;
 }
 
 .botao{
