--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -8,7 +8,7 @@
             placeholder="Buscar requerimento, nome, protocolo ou data." 
             (input)="onSearchChange($event)"  
           />
-          <button class="btn fundoazul" type="button">
+          <button class="btn fundoazul" style="background-color: rgb(134, 181, 86);" type="button">
             <img class="btnSearch" src="/img/btnSearch.png" />
           </button>
         </div>
