--- a/src/app/layouts/login/login.component.html
+++ b/src/app/layouts/login/login.component.html
@@ -30,7 +30,7 @@
             </mdb-form-control>
           </form>
 
-          <button type="button" class="btn btn-primary" (click)="onLogin()">Acessar</button>
+          <button type="button" class="btn btn-primary" style="background-color: rgb(134, 181, 86);" (click)="onLogin()">Acessar</button>
         </div>
       </div>
     </div>
