--- a/src/app/layouts/tabela-solicitantes/tabela-solicitantes.component.html
+++ b/src/app/layouts/tabela-solicitantes/tabela-solicitantes.component.html
@@ -21,7 +21,7 @@
         <td  class="elemento_tabela">{{ protocol.id }}</td>
         <td class="elemento_tabela">{{ formatDate(protocol.created_at) }}</td>
         <td class="elemento_tabela">
-          <button class="btn btn-primary" (click)="handleProtocol(protocol)">
+          <button class="btn btn-primary" style="background-color: rgb(134, 181, 86);" (click)="handleProtocol(protocol)">
             Detalhes
           </button>
         </td>
