--- a/src/app/layouts/send-form2/send-form2.component.html
+++ b/src/app/layouts/send-form2/send-form2.component.html
@@ -10,6 +10,6 @@
       </span>
     </div>
 
-    <button type="submit" class="btn btn-primary mt-3">Enviar</button>
+    <button type="submit" class="btn btn-primary mt-3" style="background-color: rgb(134, 181, 86);">Enviar</button>
   </form>
 </div>
