--- a/src/app/layouts/send-form2/send-form2.component.scss
+++ b/src/app/layouts/send-form2/send-form2.component.scss
@@ -2,6 +2,9 @@
 form {
   margin-top: 20px;
 }
-.container{
+
+.container {
   margin-top: 60px;
+  height: 100vh; /* Define a altura da página para 100% da altura da tela */
+  overflow-y: auto; /* Adiciona rolagem vertical quando o conteúdo exceder a altura */
 }
