--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -48,3 +48,9 @@ nav{
     display: flex;
     flex-direction: row-reverse;
 }
+
+.solicitacoes{
+    margin-right: 15px;
+    font-size: 77%;
+    justify-content: center;
+}
